log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 11:03:05 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
96cc939
Thu 30 Mar 2023 11:06:16 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:19:16: error: expected ‘;’ before ‘return’
   19 |   array->size=0
      |                ^
      |                ;
   20 | 
   21 |   return array;
      |   ~~~~~~        
arraylist.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
78f0c3c
Thu 30 Mar 2023 11:06:23 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4341c31
Thu 30 Mar 2023 11:10:24 PM UTC: 
 arraylist.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
eb646a4
Thu 30 Mar 2023 11:12:17 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|4
total_score: 20/70
f0eb83c
Thu 30 Mar 2023 11:14:47 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
1f2c9fc
Thu 30 Mar 2023 11:15:04 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
48358cb
